--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <title>BuyTheWay</title>
+
+    <!-- PRELOAD FIRST THE HERO IMAGES -->
+    <link
+      rel="preload"
+      as="image"
+      href="/images/hero-woman.webp"
+      type="image/webp" />
+    <link
+      rel="preload"
+      as="image"
+      href="/images/hero-man.webp"
+      type="image/webp" />
   </head>
   <body>
     <div id="root"></div>
