--- a/index.html
+++ b/index.html
@@ -7,16 +7,11 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1" />
     <title>BuyTheWay</title>
 
-    <!-- PRELOAD FIRST THE HERO IMAGES -->
+    <!-- PRELOAD THE FIRST VISIBLE HERO IMAGE -->
     <link
       rel="preload"
       as="image"
       href="/images/hero-woman.webp"
-      type="image/webp" />
-    <link
-      rel="preload"
-      as="image"
-      href="/images/hero-man.webp"
       type="image/webp" />
   </head>
   <body>
