--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>BuyTheWay</title>
+    <meta
+      name="description"
+      content="Entdecken Sie die neuesten Modetrends bei BuyTheWay! Stilvolle Kleidung, exklusive Kollektionen und unschlagbare Angebote. Jetzt shoppen!" />
 
     <!-- PRELOAD THE FIRST VISIBLE HERO IMAGE -->
     <link
